Fix left pad being too big on monile

--- a/src/clientapp/src/css/Layout.css
+++ b/src/clientapp/src/css/Layout.css
@@ -14,6 +14,7 @@
 .content {
     margin-bottom: 100px;
     padding-top: 120px;
+    padding-left: 32px;
 }
 
 html {
